# pdf2fxl

./: .gitignore  README.md  pyproject.toml
.claude/: launch.json
assets/fonts/: NOTICE.md
cloud/container/: Dockerfile  app.py  enrich.py  ocr_batch_spike.py  requirements.txt
cloud/frontend/: app.js  firebase.js  index.html  shell.css  ui.css
cloud/worker/: package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
cloud/worker/migrations/: 0001_init.sql  0002_jobs.sql  0003_artifacts.sql  0004_pricing.sql  0005_enrich.sql  0006_reprice_reflow.sql  0007_translate.sql  0008_branding.sql  0009_scale.sql
cloud/worker/src/: auth.ts  branding.ts  container.ts  download.ts  enrich.ts  finalize.ts  index.ts  jobs.ts  ledger.ts  presign.ts  start.ts  sweep.ts  translate.ts  translations.ts  types.ts
cloud/worker/test/: admin-statement.test.ts  admin.test.ts  artifacts-schema.test.ts  auth.test.ts  branding.test.ts  count.test.ts  download.test.ts  enrich.test.ts  env.d.ts  finalize.test.ts  firebase-mock.ts  health.test.ts  helpers.ts  jobs-routes.test.ts  jobs-schema.test.ts  jobs.test.ts  ledger-hold.test.ts  ledger-settle.test.ts  ledger.test.ts  presign.test.ts  r2.test.ts  scale.test.ts  schema.test.ts  start.test.ts  translate.test.ts
docs/: ai-native-handoff.md
docs/superpowers/notes/: 2026-07-06-mistral-batch-ocr-spike.md  2026-07-06-reflow-quality-microbiome.md
docs/superpowers/plans/: 2026-07-03-pdf2fxl-pipeline.md  2026-07-05-reflow-mode.md  2026-07-06-thothica-ocr-auth-ui.md  2026-07-06-thothica-ocr-phase-1-2.md  2026-07-06-thothica-ocr-plan-2a.md  2026-07-06-thothica-ocr-plan-2b.md  2026-07-07-bulk-upload-v2.md
docs/superpowers/specs/: 2026-07-03-fixed-layout-pdf-to-epub-design.md  2026-07-05-reflow-mode-design.md  2026-07-06-lightweight-scale-design.md  2026-07-06-thothica-ocr-saas-design.md  2026-07-07-emphasis-enrichment-design.md  2026-07-08-translate-add-on-design.md
src/pdf2fxl/: cli.py  config.py  fittext.py  ingest.py  inpaint.py  models.py  ocr.py  pipeline.py  render_epub.py  render_pptx.py  style.py  textmask.py
src/pdf2fxl/reflow/: assemble.py  crop.py  docmodel.py  fonts.py  hierarchy.py  inline_md.py  layout.py  ocr_reflow.py  pipeline_reflow.py  render_docx.py  render_epub_reflow.py  render_md.py  scripts.py  segment.py  typesize.py
src/pdf2fxl/translate/: __init__.py  corpus.py  engine.py  guards.py
src/pdf2fxl/web/: __main__.py  app.py  (+1 more)
tests/: conftest.py  test_cli.py  test_config.py  test_fittext.py  test_ingest.py  test_inpaint.py  test_models.py  test_ocr.py  test_pipeline.py  test_render_epub.py  test_render_pptx.py  test_style.py  test_textmask.py
tests/container/: test_app.py  test_enrich.py  test_process.py  test_render.py  test_translate.py
tests/reflow/: test_assemble.py  test_cli_reflow.py  test_config_reflow.py  test_crop.py  test_docmodel.py  test_hierarchy.py  test_inline_md.py  test_layout.py  test_ocr_reflow.py  test_pipeline_reflow.py  test_render_docx.py  test_render_epub_reflow.py  test_render_md.py  test_segment.py  test_typesize.py
(+83 files in other folders)
